# rpsgame

./: README.md  docker-compose.yml  start.sh
backend/: .gitignore  Dockerfile  README.md  mix.exs
backend/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
backend/lib/: rpsgame_backend.ex  rpsgame_backend_web.ex
backend/lib/rpsgame_backend/: application.ex  auth.ex  repo.ex
backend/lib/rpsgame_backend_web/: endpoint.ex  gettext.ex  router.ex
backend/priv/repo/: seeds.exs
backend/test/: test_helper.exs
backend/test/rpsgame_backend/: auth_test.exs
backend/test/support/: channel_case.ex  conn_case.ex  data_case.ex
docs/: asset-manifest.json  index.html  precache-manifest.c4694531d1037167dfec22c0d09ef7c2.js  service-worker.js
docs/static/js/: 2.9c6f5ed1.chunk.js  main.9c6ae975.chunk.js  main.9c6ae975.chunk.js.map
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/nginx/: front.conf
frontend/public/: index.html
frontend/src/: index.js
frontend/src/components/: App.js
frontend/src/context/: index.js  web3.js
nodes/geth-node/: Dockerfile  start.sh
nodes/substrate/: Cargo.toml  README.md  init.sh
nodes/substrate/runtime/wasm/: Cargo.toml  build.sh
nodes/substrate/runtime/wasm/src/: lib.rs
smart-contracts/: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  package.json  sc-artifacts.sh  test-ganache.sh  truffle-config.js
smart-contracts/contracts/: RockPaperScissors.sol
smart-contracts/migrations/: 2_deploy_contracts.js
smart-contracts/test/: RockPaperScissors.test.js
(+41 files in other folders)
